nessus/k8s/traefik/ingress.yaml
---
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: traefik.testing.io
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-dashboard-service
          servicePort: 8080
